# airbnb_clone

./: .gitignore  LICENSE  pyproject.toml
bookings/: models.py
bookings/migrations/: 0001_initial.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py
experiences/: admin.py  models.py  views.py
experiences/migrations/: 0001_initial.py
medias/: models.py
medias/migrations/: 0001_initial.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py
rooms/: admin.py  models.py  serializers.py  urls.py  views.py
rooms/migrations/: 0001_initial.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
